[tool.poetry]
name = "data-structures-and-algorithms"
version = "0.1.0"
description = ""
authors = ["Robert Rodger <woodenrabbit@gmail.com>"]
packages = [
    { include = "data_structures", from = "src" },
    { include = "algorithms", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
